force-app/main/default/objects/DM_Charge__c/DM_Charge__c.object-meta.xml
<CustomObject>
    <label>DM Charge</label>
    <nameField>
        <label>DM Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>