force-app/main/default/objects/DM_Charge__c/fields/DM_Balance__c.field-meta.xml
<CustomField>
    <fullName>DM_Balance__c</fullName>
    <inlineHelpText>This field contains the principal balance on the loan after the charge has been applied.</inlineHelpText>
    <label>DM_Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>