force-app/main/default/objects/DM_Charge__c/fields/DM_Capitalization_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Capitalization_Date__c</fullName>
    <description>Charge&apos;s Capitalization Date</description>
    <inlineHelpText>Charge&apos;s Capitalization Date</inlineHelpText>
    <label>DM_Capitalization Date</label>
    <type>Date</type>
</CustomField>