force-app/main/default/objects/DM_Charge__c/fields/DM_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Date__c</fullName>
    <inlineHelpText>This is the date the charge was incurred.</inlineHelpText>
    <label>DM_Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>