force-app/main/default/objects/DM_Charge__c/fields/DM_Fee__c.field-meta.xml
<CustomField>
    <fullName>DM_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Fee</label>
    <referenceTo>loan__Fee__c</referenceTo>
    <relationshipLabel>DM Charges</relationshipLabel>
    <relationshipName>DM_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>