force-app/main/default/objects/DM_Charge__c/fields/DM_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate__c</fullName>
    <inlineHelpText>This is the interest rate to be applied on the charge (if applicable)</inlineHelpText>
    <label>DM_Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>