force-app/main/default/objects/DM_Charge__c/fields/DM_Internal_Accounting_Generated__c.field-meta.xml
<CustomField>
    <fullName>DM_Internal_Accounting_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field indicates if accounting has been passed for the accrual entry record.</inlineHelpText>
    <label>DM_Internal Accounting Generated</label>
    <type>Checkbox</type>
</CustomField>