force-app/main/default/objects/DM_Charge__c/fields/DM_Last_Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Accrual_Date__c</fullName>
    <description>Last accrual Date on charge (Usually the last payment transaction date)</description>
    <inlineHelpText>The date when the last interest accrual was processed</inlineHelpText>
    <label>DM_Last Accrual Date</label>
    <type>Date</type>
</CustomField>