force-app/main/default/objects/DM_Charge__c/fields/DM_Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Original_Amount__c</fullName>
    <inlineHelpText>The original amount of the charge.</inlineHelpText>
    <label>DM_Original Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>