force-app/main/default/objects/DM_Charge__c/fields/DM_payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_payment_Amount__c</fullName>
    <label>DM payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>