force-app/main/default/objects/DM_Charge__c/fields/DM_Reference__c.field-meta.xml
<CustomField>
    <fullName>DM_Reference__c</fullName>
    <inlineHelpText>This text can be used to provide additional information about the charge.</inlineHelpText>
    <label>DM_Reference</label>
    <type>TextArea</type>
</CustomField>