force-app/main/default/objects/DM_Charge__c/fields/DM_Summary_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_Summary_Record_Id__c</fullName>
    <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
    <label>DM_Summary Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>