force-app/main/default/objects/DM_Charge__c/fields/DM_Waive__c.field-meta.xml
<CustomField>
    <fullName>DM_Waive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This flag is set when the charge is fully waived.</inlineHelpText>
    <label>DM_Waived</label>
    <type>Checkbox</type>
</CustomField>