force-app/main/default/objects/DM_Charge__c/fields/DM_Waived_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Waived_Interest__c</fullName>
    <label>DM_Waived Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>